[gd_scene load_steps=4 format=3 uid="uid://gah0tyr0hid2"]

[ext_resource type="Script" path="res://tower/test_tower.gd" id="1_7vwvv"]
[ext_resource type="Texture2D" uid="uid://bsr6j0m6a1m2g" path="res://icon.svg" id="1_t3duc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ibm4v"]
radius = 192.167

[node name="TestTower" type="Node2D"]
script = ExtResource("1_7vwvv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_t3duc")

[node name="Range" type="Area2D" parent="."]
monitorable = false
priority = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
rotation = -0.000330579
shape = SubResource("CircleShape2D_ibm4v")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(128, 0)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(128, 0)

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
